<resources>
    <string name="app_name">Topaz</string>
    <string name="intro_title_1">Export world class Top Plywood as per your Requirement &amp; Choice</string>
    <string name="best_plywood">Find the Best Plywood For your Office</string>
    <string name="get_started">Get Started</string>
    <string name="sk">
        <u>Skip</u>
    </string>
    <string name="skip">Skip</string>
    <string name="mobile_no">Enter your mobile number</string>
    <string name="dig">We will send you the</string>
    <string name="six"> 6 digit</string>
    <string name="vernum"> verfication number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cont">Continue</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="otp_validation">OTP Verifications</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="account_information">Account Informations</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_name">Enter name</string>
    <string name="customer_id">Customer ID</string>
    <string name="enter_id">Enter ID</string>
    <string name="address_line">Address Line</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="account">Account</string>
    <string name="favourite">Favourite</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="plywood">Plywood</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="buy_finestquality_plywoods">BUY FINESTQUALITY Plywoods</string>
    <string name="plywood_boards">Plywood Boards</string>
    <string name="laminates">Laminates</string>
    <string name="veneers">Veneers</string>
    <string name="faceveneers">FaceVeneers</string>
    <string name="mdf">MDF</string>
    <string name="doors">Doors</string>
    <string name="pvc_boards">PVC Boards</string>
    <string name="furniture_boards">Furniture Boards</string>
    <string name="exteria">Exteria</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_request_has_been_sent">Your request has been sent</string>
    <string name="to">to</string>
    <string name="search_">Search</string>
    <string name="fullstop">. . .</string>
    <string name="search_products">Search Products</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="thank_you_for_using_topaz">thank you for shopping using topaz</string>
    <string name="back_to_home">Back to Home</string>
    <string name="_0_result">0 Result</string>
    <string name="my_wishlist">My wishlist</string>
    <string name="wooden_waterproof_plywood_sheet_thickness_18_mm">Wooden Waterproof Plywood Sheetzxxzxzxz</string>
    <string name="_59">₹59/</string>
    <string name="square_feet">Square Feet</string>
    <string name="_84">₹ 1</string>
    <string name="best_waterproof_plywoods">Best Waterproof Plywoods</string>
    <string name="waterproof_plywoods">Waterproof Plywoods</string>
    <string name="body_shape">Wooden Waterproof Plywood Sheet, Thickness: 18 mm</string>
    <string name="specifications">Specifications</string>
    <string name="size">Size</string>
    <string name="thickness">Thickness</string>
    <string name="thickness_">Thickness:</string>
    <string name="wood_type">Wood Type</string>
    <string name="hardwood">Hardwood</string>
    <string name="supplier">Supplier</string>
    <string name="description">Description</string>
    <string name="desc1_">Kitply BWR Plywood is a premium grade boiling water resistant plywood . it is manufactured with wider core and panel and bonded with high grade PF resin to resist in a high moisture environment.</string>
    <string name="get_a_price">Get a Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="wooden_waterproof_plywood">Wooden Waterproof Plywood Sheet, Thickness: 18 mm</string>
    <string name="quantity">Quantity</string>
    <string name="s_ft_price">S/Ft Price</string>
    <string name="total_value">Total Value (₹)</string>
    <string name="total_value_2">Total Value</string>
    <string name="_6_mm">6 mm</string>
    <string name="size_feet">Size (Feet)</string>
    <string name="ask_for_quotation">Ask for Quotation</string>
    <string name="requirement_details">Requirement Details</string>
    <string name="enter_requirement_details">Enter Requirement Details</string>
    <string name="my_cart">My Cart</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="check_out">Check Out</string>
    <string name="price_details">Price Details</string>
    <string name="qutation_requested">Qutation Requested</string>
    <string name="view_details">View details</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="tax_invoice">Tax Invoice</string>
    <string name="invoice_no">Invoice No:</string>
    <string name="sold_by">Sold By</string>
    <string name="billing_address">Billing Address</string>
    <string name="karnataka">#3,Kanaka Nagar Main Road, Opposite, B.S.R.Residency, R.T.Nagar Post, Bengaluru, Karnataka 560032</string>
    <string name="didn_t_receive_otp">Didn’t receive OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="change_email_id">Change Email ID</string>
    <string name="enter_otp_to_change_email_address">Enter OTP to Change Email address</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="enter_new_email_address">Enter New Email Address</string>
    <string name="enter_new_email_addresss">Enter new email address</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="enter_new_phone_number">Enter New Phone Number</string>
    <string name="enter_new_phone_numberr">Enter new phone number</string>
    <string name="enter_otp_to_change_phone_number">Enter OTP to Change Phone Number</string>
    <string name="otp_sent_to_the_new_phone_number">OTP sent to the new phone number</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="add_address">Add address</string>
    <string name="you_have_no_addresses">You have no addresses</string>
    <string name="an_address_for_faster_checkout_experience">An address for faster checkout experience</string>
    <string name="plus_add_address">+ Add address</string>
    <string name="my_account">My account</string>
    <string name="my_order">My Order</string>
    <string name="my_address">My Address</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="contact_info">Contact info</string>
    <string name="name">Name</string>
    <string name="address_info">Address info</string>
    <string name="locality_area_street">Locality/Area/Street</string>
    <string name="flat_no_building_name">Flat no/Building Name</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="landmark_optional">Landmark (Optional)</string>
    <string name="type_of_address">Type of Address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="mark_as_a_defalult_address">Mark as a defalult address</string>
    <string name="save_address">Save Address</string>
    <string name="february_20_2022">February 20 2022</string>
    <string name="order_summary">Order Summary</string>
    <string name="change_or_add_address">Change or Add address</string>
    <string name="payment">Payment</string>
    <string name="payment_method1">Payment Method</string>
    <string name="google_pay_upi">Google pay UPI</string>
    <string name="phonepe_upi">Phonepe UPI</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay">Payments</string>
    <string name="enter_the_characters">Enter the characters</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="return_to_payment_options">Return to payment options</string>
    <string name="delivery_to">Delivery to:</string>
    <string name="place_order">Place Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="faq">FAQ</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="why_is_centuryply_a_better_product"> Why is CenturyPly a better product?</string>
    <string name="century_ply_uses_good_quality_raw_material_and_also_has_rigorous_quality_checks_at_every_stage_to_verify_that_the_best_product_is_going_to_the_market"> Century Ply uses good quality raw material and also has rigorous quality checks at every stage to verify that the best product is going to the market.</string>
    <string name="what_grade_of_plywood_is_recommended_for_green_buildings"> What grade of plywood is recommended \nfor Green buildings?</string>
    <string name="where_to_get_quality_of_plywood_checked"> Where to get quality of plywood checked?</string>
    <string name="how_to_get_redressal_of_plywood_complaints"> How to get redressal of plywood complaints?</string>
    <string name="does_using_gurjan_make_ply_better"> Does using gurjan make ply better?</string>
    <string name="how_to_check_if_it_is_gurjan"> How to check if it is gurjan?</string>
    <string name="what_is_the_alternative_timber_for_gurjan"> What is the alternative timber for Gurjan?</string>
    <string name="what_is_natural_forest_timber"> What is natural forest timber?</string>
    <string name="how_to_recognise_fake_plywood_brand"> How to recognise fake plywood brand?</string>
    <string name="q3ans">Best Quality plywood is always ISI certified. Commercial Or MR Grade Plywood is IS: 303 and Marine or Waterproof Plywood is IS: 710. Always looks for CML number underneath of ISI mark. Plywood manufacturer has unique CML no, which also help in identifying plywood manufacturers easily</string>
    <string name="q4ans">Being a natural product, timber is inherently versatile and can be readily reused and recycled into a variety of applications. Native timbers are particularly well suited to recycling because of their inherent durability, strength and character.</string>
    <string name="gurjan">It has a Uniform size and steadiness and Consistent width,Good strength to weight proportion, Hefty and rigid. It has a Increased resistance and Resist moisture and microbes, and it has a Great holding capacity for screws and nails as it is Fire safe</string>
    <string name="gur_ply">Gurjan Plywood is referred to as the premium quality, extra strong, and durable plywood made from wood veneers of Gurjan trees seen mostly in south-east Asian countries. Gurjan Plywood stays exceptional among different grades of Plywoods due to the extraordinary features it exhibits</string>
    <string name="ply_check">Check plywood surface is smooth and doesn\'t have ups or down. Check Weight of plywood by lifting from one side. Heavy weight plywood is always carrying more density. Check side of plywood and make sure core layers should be visible as straight lines without core gaps and much overlapping.</string>
</resources>