<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.FaqActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:text="@string/faq"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/backarrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:id="@+id/constraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frequentquestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/frequently_asked_questions"
                android:textColor="@color/violet"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingRight="@dimen/_5sdp"
                android:elevation="@dimen/_5sdp"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/why_is_centuryply_a_better_product"
                android:visibility="visible" />

            <TextView
                android:id="@+id/q1ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                android:text="@string/century_ply_uses_good_quality_raw_material_and_also_has_rigorous_quality_checks_at_every_stage_to_verify_that_the_best_product_is_going_to_the_market"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_gravity="start|center_vertical"
                android:textStyle="bold"
                android:paddingRight="@dimen/_5sdp"
                android:background="@color/white"
                android:textAllCaps="false"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/what_grade_of_plywood_is_recommended_for_green_buildings"
                android:visibility="visible" />

            <TextView
                android:id="@+id/q2ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:text="Sample text"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:paddingRight="@dimen/_5sdp"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/how_to_recognise_fake_plywood_brand"
                android:visibility="visible" />

            <TextView
                android:id="@+id/q3ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:text="@string/q3ans"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:paddingRight="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/what_is_natural_forest_timber"
                android:visibility="visible" />

            <TextView
                android:id="@+id/q4ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:text="@string/q4ans"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="14sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:paddingRight="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/what_is_the_alternative_timber_for_gurjan"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingRight="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="bold"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/how_to_check_if_it_is_gurjan"
                android:visibility="visible" />

            <TextView
                android:id="@+id/q6ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gurjan"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"
                android:paddingRight="@dimen/_5sdp"
                android:background="@color/white"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/does_using_gurjan_make_ply_better"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/q7ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gur_ply"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingRight="@dimen/_5sdp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/how_to_get_redressal_of_plywood_complaints"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/q9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:paddingRight="@dimen/_5sdp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:drawableStart="@drawable/rectangle_471"
                android:drawableEnd="@drawable/pls"
                android:text="@string/where_to_get_quality_of_plywood_checked"
                android:visibility="visible" />


            <TextView
                android:id="@+id/q9ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:text="@string/ply_check"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>