<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/plywood"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/plywood"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/veneers" />

    <TextView
        android:id="@+id/laminates"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/laminates"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/veneers"
        app:layout_constraintStart_toEndOf="@+id/plywood"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/veneers"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/veneers"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/laminates"
        app:layout_constraintTop_toTopOf="@+id/laminates" />


</androidx.constraintlayout.widget.ConstraintLayout>