<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/slider_topaz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="175dp"
        android:src="@drawable/topaz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="90dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="90dp"
        android:gravity="center_vertical"
        android:text="@string/mobile_no"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="60dp"
        android:layout_marginTop="352dp"
        android:gravity="center_vertical"
        android:text="@string/dig"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="352dp"
        android:gravity="center_vertical"
        android:text="@string/six"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="352dp"
        android:gravity="center_vertical"
        android:text="@string/vernum"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />


    <com.hbb20.CountryCodePicker
        android:id="@+id/country_Code_Picker"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/roundedtext"
        app:ccp_textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_no_edit_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/roundedtext"
        android:hint="@string/enter_mobile_no"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/country_Code_Picker" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/phone_continue_btn"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/roundedbtndarkblue"
        android:text="@string/cont"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/phone_no_edit_text"
        app:layout_constraintStart_toStartOf="@+id/country_Code_Picker"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>